# rust_sample_code

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  output.txt
.github/workflows/: build.yml
adder/: Cargo.toml
closure/: Cargo.toml
closure/src/: lib.rs  main.rs
objective/: Cargo.toml
objective/src/: lib.rs  main.rs
src/: lib.rs  main.rs
thread/: Cargo.toml
thread/src/: lib.rs  main.rs
